# Lumo-Compositor

./: .gclient_previous_custom_vars  .gclient_previous_sync_commits  .gitignore  .gitmodules  CHANGELOG.md  Design.md  README.md  build-docs.sh  build.sh  config  i3blocks.conf  launcher_env.json  lumo_gesture.py  lumo_gesture.sh  lumo_launcher.py  lumo_launcher.sh  lumo_test_button.py  open_launcher_ipc.sh  overlay_controller.py  status.sh  sync_lumo.py
blocks/: lumo_debug_block.sh
compositor/: README.md  meson.build  meson_options.txt
compositor/data/: 99-lumo-orangepi-touch.rules  lumo-headless.desktop.in  lumo-session.sh  lumo.desktop.in
compositor/include/lumo/: app.h  app_icons.h  app_render.h  compositor.h  hal.h  lumo_icon.h  lumo_term.h  screenshot.h  shell.h  shell_protocol.h  version.h
compositor/protocol/: wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml
compositor/src/: backend.c  compositor.c  input.c  main.c  output.c  protocol.c  screenshot.c  screenshot_common.c  shell_client.c  shell_launch.c  shell_ui.c  xwayland.c
compositor/src/apps/: app_catalog.c  app_client.c  app_clock.c  app_files.c  app_github.c  app_notes.c  app_photos.c  app_settings.c  app_stubs.c  app_sysmon.c  app_terminal.c  app_ui.c  app_weather.c  browser.c
compositor/src/core/: backend.c  compositor.c  input.c  input_internal.h  input_pointer.c  input_touch.c  lumo_cache.c  main.c  output.c  touch_audit.c  xwayland.c
compositor/src/protocol/: protocol.c  protocol_internal.h  protocol_setters.c  shell_protocol.c
compositor/src/shell/: shell_background.c  shell_bridge.c  shell_client.c  shell_client_internal.h  shell_draw.c  shell_hw.c  shell_input.c  shell_launch.c  shell_launch_internal.h  shell_osk.c  shell_protocol_client.c  shell_render.c  shell_render_internal.h  shell_theme.c  shell_ui.c  shell_wave_gpu.c
compositor/src/tools/: lumo_setup.c  screenshot.c  screenshot_common.c
compositor/tests/: test_lumo.c  test_shell.c
compositor/tests/apps/: test_app.c  test_browser.c  test_shm_browser.sh
compositor/tests/core/: test_fuzz.c  test_lumo.c  test_perf.c
compositor/tests/live/: run_live_tests.sh
compositor/tests/shell/: test_shell.c
compositor/tests/tools/: test_screenshot.c
docs/: lumo-apps.md  lumo-compositor-architecture.md  lumo-gesture-system.md  lumo-gpu-rendering.md  lumo-migration-plan.md  lumo-osk.md  lumo-security-audit.md  lumo-theme-engine.md
extensions/lumo-theme/: lumo-content.css  manifest.json  newtab.html
gpu/: README.md  build-mesa-pvr.sh  wlroots-powervr-drm-fallback.patch
tools/: build-image.sh
